# sharp-iot-component

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  hacs.json  pyproject.toml
custom_components/sharp_iot/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  fan.py  manifest.json  sensor.py  switch.py
custom_components/sharp_iot/lib/sharp_core/: __init__.py  states.py
custom_components/sharp_iot/lib/sharp_devices/: device_control.py  device_properties.py  operations.py
scripts/: build_hacs_release.sh
