[project]
name = "sharp-iot"
version = "0.1.0"
description = "Sharp IoT device control workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["sharp-auth", "sharp-cli"]

[tool.uv.workspace]
members = [
    "packages/sharp-core",
    "packages/sharp-auth",
    "packages/sharp-devices",
    "packages/sharp-cli",
    "packages/sharp-homeassistant"
]

[tool.uv.sources]
sharp-auth = { workspace = true }
sharp-cli = { workspace = true }
